objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Base__c</fullName>
        <label>Hourly Rate Base</label>
        <picklist>
            <picklistValues>
                <fullName>Project Member</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Logged_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Logged Time</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <formula>Task__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Member</label>
        <referenceTo>Project_Member__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Manager__c</fullName>
        <formula>CASESAFEID(Task__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <formula>Task__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Timer_Started__c</fullName>
        <label>Timer Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>IF(ISPICKVAL(Hourly_Rate_Base__c, &apos;Project Member&apos;), Project_Member__r.Hourly_Rate__c,
IF(ISPICKVAL(Hourly_Rate_Base__c, &apos;Task&apos;), Task__r.Hourly_Rate__c,
IF(ISPICKVAL(Hourly_Rate_Base__c, &apos;Project&apos;), Task__r.Project__r.Hourly_Rate__c, 0))) * 1.0 * Logged_Time__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekly Timesheet</label>
        <referenceTo>Weekly_Timesheet__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_Locked__c</fullName>
        <formula>Weekly_Timesheet__r.Locked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Timer_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Timer active</label>
        <type>Checkbox</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <label>WorkLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Future_Dates_are_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>Date__c &gt; today()</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Future Dates are not allowed</errorMessage>
    </validationRules>
</CustomObject>